<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="669dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textColor="#7D7F7D"
            android:textSize="80sp" />

        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_hint_numero"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="35sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_hint_numero"
            android:inputType="number"
            android:textSize="35sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/suma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_suma" />

                <Button
                    android:id="@+id/resta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@string/btn_text_resta"
                    android:text="@string/btn_text_resta" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/multiplicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@string/btn_text_multiplicacion"
                    android:text="@string/btn_text_multiplicacion" />

                <Button
                    android:id="@+id/division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@string/btn_text_division"
                    android:text="@string/btn_text_division" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>